--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "devDependencies": {
     "coffee-script": "^1.9.3",
+    "del": "^1.2.0",
     "gulp": "^3.9.0",
-    "gulp-coffee": "^2.3.1"
+    "gulp-coffee": "^2.3.1",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-util": "^3.0.5",
+    "run-sequence": "^1.1.0"
   }
 }
